Adding form buttons

--- a/react-project/src/components/NewPost.module.css
+++ b/react-project/src/components/NewPost.module.css
@@ -10,3 +10,19 @@
     color: #eadbfb;
     font-weight: bold;
 }
+
+.actions{
+    display:flex;
+    justify-content: flex-end;
+    gap: 0.5rem;
+}
+
+.actions button{
+    cursor: pointer;
+    font: inherit;
+    padding: 0.5rem 1.5rem;
+    border: none;
+    border-radius: 4px;
+    background-color: #34036c;
+    color: #e5d5f7;
+}
